--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <div class="container">
         <header>
-            <h1>ZIP转</h1>
-            <p>将你的谱面 ZIP 包转换为 ArcCreate 可用的 ARCpkg 格式</p>
+            <h1>ZIP转ARCPKG</h1>
+            <p>将你的谱面 ZIP 包转换为 ArcCreate 可用的 arcpkg 格式</p>
         </header>
 
         <div class="config-section">
