--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ZIP转ARCPKG</title>
     <link rel="stylesheet" href="style.css">
+    <!-- 引入依赖库：JSZip（解压）、js-yaml（解析slst.txt） -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/js-yaml/4.1.0/js-yaml.min.js"></script>
 </head>
@@ -12,23 +13,21 @@
     <div class="container">
         <header>
             <h1>ZIP转ARCPKG</h1>
-            <p>将你的谱面 ZIP 包转换为 ArcCreate 可用的 ARCpkg 格式（支持批量上传）</p>
+            <p>将谱面ZIP包转换为ArcCreate可用的arcpkg格式（支持批量上传）</p>
         </header>
-        <div class="config-section">
-            <div class="input-group">
-                <label for="userId">用户ID（将作为谱面作者标识）:</label>
-                <input type="text" id="userId" value="Unknown_User" placeholder="输入你的用户ID">
-            </div>
-        </div>
+
+        <!-- 上传区域 -->
         <div class="upload-section">
             <div class="upload-area" id="uploadArea">
                 <div class="upload-icon">📁</div>
                 <p class="upload-text">拖拽多个ZIP文件到这里，或点击选择文件</p>
-                <p class="upload-hint">支持包含 base.ogg, base.jpg, slst.txt 和 .aff 谱面文件的ZIP包，可批量上传</p>
+                <p class="upload-hint">支持包含 base.ogg, base.jpg, slst.txt 和 .aff 谱面文件的ZIP包</p>
                 <input type="file" id="fileInput" accept=".zip" multiple style="display: none;">
                 <button class="upload-btn" onclick="document.getElementById('fileInput').click()">选择文件</button>
             </div>
         </div>
+
+        <!-- 整体进度条（无单个文件进度条） -->
         <div class="progress-section hidden" id="progressSection">
             <div class="progress-header">
                 <h3>处理进度</h3>
@@ -36,24 +35,29 @@
             </div>
             <progress id="progressBar" value="0" max="100"></progress>
         </div>
+
+        <!-- 日志区域 -->
         <div class="logs-section">
             <div class="logs-header">
                 <h3>处理日志</h3>
-                <button class="clear-logs-btn" onclick="clearLogs()">清空日志</button>
             </div>
             <div class="logs-container" id="logsContainer">
                 <div class="log-entry info">
-                    <span class="log-time" id="currentTime"></span>
+                    <span class="log-time">[初始化]</span>
                     <span class="log-message">等待文件上传...</span>
                 </div>
             </div>
         </div>
+
+        <!-- 结果区域（下载链接） -->
         <div class="result-section hidden" id="resultSection">
             <div class="result-header">
                 <h3>打包结果</h3>
             </div>
             <div id="resultContent"></div>
         </div>
+
+        <!-- 错误提示区域 -->
         <div class="error-section hidden" id="errorSection">
             <div class="error-header">
                 <h3>错误信息</h3>
