Add conversion statistics display to index.html
Added a conversion statistics section to display the number of successfully converted files.

--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
             <div id="errorContent"></div>
         </div>
     </div>
+    <div id="conversionStats" style="margin-top: 20px; text-align: center; color: #666;">
+        目前已成功转换 <span id="successCount">0</span> 份文件
+    </div>
     <script src="app.js"></script>
 </body>
+
 </html>
