Refactor index.html for improved layout and styles
Updated the HTML structure and styles for better presentation.

--- a/index.html
+++ b/index.html
@@ -65,10 +65,11 @@
             <div id="errorContent"></div>
         </div>
     </div>
-    <div id="conversionStats" style="margin-top: 20px; text-align: center; color: #666;">
+    <div id="conversionStats" style="margin-top: 20px; text-align: center; color: white;">
         目前已成功转换 <span id="successCount">0</span> 份文件
     </div>
     <script src="app.js"></script>
 </body>
 
 </html>
+
