--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
         目前已成功转换 <span id="successCount">0</span> 份文件
     </div>
     <script src="app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </body>
 
 </html>
+
 
