--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
         <label for="charterInput">谱师 Chart</label>
         <input type="text" id="charterInput" placeholder="请输入谱师名称">
     </div>
+    <div class="input-group">
+        <label for="bpmInput">BPM</label>
+        <input type="number" id="bpmInput" placeholder="请输入BPM值" min="1" step="1" value="120">
+    </div>
     <button class="continue-btn" id="continueBtn">继续处理</button>
 </div>
 
