--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
             <h1>ZIP转ARCPKG</h1>
             <p>将谱面ZIP包转换为ArcCreate可用的arcpkg格式（支持批量上传）</p>
         </header>
-
         <!-- 上传区域 -->
         <div class="upload-section">
             <div class="upload-area" id="uploadArea">
@@ -27,22 +26,34 @@
             </div>
         </div>
         
-<!-- 手动输入区域 -->
-<div class="input-section hidden" id="inputSection">
-    <div class="input-group">
-        <label for="illustratorInput">曲师 Illustration</label>
-        <input type="text" id="illustratorInput" placeholder="请输入曲师名称">
-    </div>
-    <div class="input-group">
-        <label for="charterInput">谱师 Chart</label>
-        <input type="text" id="charterInput" placeholder="请输入谱师名称">
-    </div>
-    <div class="input-group">
-        <label for="bpmInput">BPM</label>
-        <input type="number" id="bpmInput" placeholder="请输入BPM值" min="1" step="1" value="120">
-    </div>
-    <button class="continue-btn" id="continueBtn">继续处理</button>
-</div>
+        <!-- 手动输入区域 -->
+        <div class="input-section hidden" id="inputSection">
+            <div class="input-group">
+                <label for="illustratorInput">曲师 Illustration</label>
+                <input type="text" id="illustratorInput" placeholder="请输入曲师名称">
+            </div>
+            <div class="input-group">
+                <label for="charterInput">谱师 Chart</label>
+                <input type="text" id="charterInput" placeholder="请输入谱师名称">
+            </div>
+            <div class="input-group">
+                <label for="bpmInput">BPM</label>
+                <input type="number" id="bpmInput" placeholder="请输入BPM值" min="1" step="1" value="120">
+            </div>
+            <button class="continue-btn" id="continueBtn">继续处理</button>
+        </div>
+
+        <!-- 新增：背景图片输入区域（初始隐藏） -->
+        <div class="input-section hidden" id="backgroundInputSection">
+            <div class="upload-area" id="backgroundUploadArea">
+                <div class="upload-icon">🖼️</div>
+                <p class="upload-text">未检测到Background图片，拖拽JPG文件到这里，或点击选择文件</p>
+                <p class="upload-hint">支持名称包含"Background"的JPG文件，将用于歌曲背景</p>
+                <input type="file" id="backgroundFileInput" accept=".jpg" style="display: none;">
+                <button class="upload-btn" onclick="document.getElementById('backgroundFileInput').click()">选择背景图片</button>
+            </div>
+            <button class="continue-btn" id="skipBackgroundBtn" style="margin-top: 20px;">跳过添加背景</button>
+        </div>
 
         <!-- 整体进度条（无单个文件进度条） -->
         <div class="progress-section hidden" id="progressSection">
@@ -52,7 +63,6 @@
             </div>
             <progress id="progressBar" value="0" max="100"></progress>
         </div>
-
         <!-- 日志区域 -->
         <div class="logs-section">
             <div class="logs-header">
@@ -65,7 +75,6 @@
                 </div>
             </div>
         </div>
-
         <!-- 结果区域（下载链接） -->
         <div class="result-section hidden" id="resultSection">
             <div class="result-header">
@@ -73,7 +82,6 @@
             </div>
             <div id="resultContent"></div>
         </div>
-
         <!-- 错误提示区域 -->
         <div class="error-section hidden" id="errorSection">
             <div class="error-header">
@@ -87,10 +95,6 @@
     </div>
     
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-<script src="app.js"></script>
+    <script src="app.js"></script>
 </body>
-
 </html>
-
-
-
