--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
                 <label for="bpmInput">BPM</label>
                 <input type="number" id="bpmInput" placeholder="请输入BPM值" min="1" step="1" value="200">
             </div>
+<div class="input-group">
+    <label for="difficultyInput">难度等级</label>
+    <input type="text" id="difficultyInput" placeholder="请输入难度等级，如：11">
+</div>
             <button class="continue-btn" id="continueBtn">继续处理</button>
         </div>
 
