--- a/index.html
+++ b/index.html
@@ -44,16 +44,7 @@
             </div>
             <div class="input-group">
                 <label for="difficultyInput">难度</label>
-                <div style="display:flex;gap:8px;align-items:center;">
-                    <select id="difficultySelect" aria-label="难度名称">
-                        <option value="Past">Past</option>
-                        <option value="Present">Present</option>
-                        <option value="Future">Future</option>
-                        <option value="Beyond">Beyond</option>
-                        <option value="Eternal">Eternal</option>
-                    </select>
-                    <input type="number" id="difficultyInput" placeholder="等级（数字）" min="-1" step="1" style="width:100px;" />
-                </div>
+                <input type="text" id="difficultyInput" placeholder="请输入BPM值">
             </div>
             <button class="continue-btn" id="continueBtn">继续处理</button>
         </div>
