--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
             <div class="input-group">
                 <label for="difficultyInput">难度</label>
-                <input type="text" id="difficultyInput" placeholder="请输入BPM值">
+                <input type="text" id="difficultyInput" placeholder="请输入难度">
             </div>
             <button class="continue-btn" id="continueBtn">继续处理</button>
         </div>
